# KawaLang

./: .gitignore  README.md  TODO  test.kwa
_build/default/: .gitignore  META.kawa  README.md  dune-project  kawa.dune-package  kawa.install  kawa.opam  test.kwa
_build/default/.dune/: configurator  configurator.v2
_build/default/lexpar/: parse.mly
_build/default/lib/: abstract_syntax.ml  ast.ml  context.ml  ctx.ml  debug.ml  dune  frame.ml  interpreter.ml  lang.cma  lang.cmxa  lang.cmxs  lang.ml-gen  lexer.ml  lexer.mll  load.ml  loader.ml  method.ml  parser.automaton  parser.conflicts  parser.ml  parser.mli  parser.mly  parser__mock.ml.mock  parser__mock.mli.inferred  symbol.ml  symbol_resolv.ml  symbol_resolver.ml  type.ml  type_check.ml  type_checker.ml  type_error.ml
_build/default/lib/.lang.objs/: lang__Abstract_syntax.impl.d  lang__Allocator.impl.d  lang__Ast.impl.all-deps  lang__Ast.impl.d  lang__Call.impl.all-deps  lang__Call.impl.d  lang__Context.impl.all-deps  lang__Context.impl.d  lang__Ctx.impl.all-deps  lang__Ctx.impl.d  lang__Debug.impl.d  lang__Environment.impl.all-deps  lang__Environment.impl.d  lang__Frame.impl.all-deps  lang__Frame.impl.d  lang__Interpreter.impl.all-deps  lang__Interpreter.impl.d  lang__Lexer.impl.all-deps  lang__Load.impl.all-deps  lang__Load.impl.d  lang__Loader.impl.d  lang__Method.impl.d  lang__Parser.impl.d  lang__Parser.intf.d  lang__Sym.impl.d  lang__Symbol.impl.d  lang__Symbol_resolv.impl.all-deps  lang__Symbol_resolv.impl.d  lang__Symbol_resolver.impl.all-deps  lang__Type.impl.d  (+9 more)
_build/default/src/: dune  kawai.ml
(+264 files in other folders)
